--- a/frontend/src/components/AdminDashBoard/VenueDetail.css
+++ b/frontend/src/components/AdminDashBoard/VenueDetail.css
@@ -189,4 +189,18 @@ body {
   .modal button:hover {
     background: #0056b3;
   }
+
+
+  .specialBttn{
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    font-size: 15px;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-bottom: 10px;
+  }
+  
+
   
