--- a/frontend/src/components/frontpage/LoginForm.module.css
+++ b/frontend/src/components/frontpage/LoginForm.module.css
@@ -73,3 +73,69 @@ h2 {
 .loginBox button:hover {
   background-color: #0056b3;
 }
+
+/* Media Queries */
+
+/* Tablets and smaller devices (width <= 768px) */
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+
+  .card {
+    width: 200px;
+    height: 200px;
+  }
+
+  .card h3 {
+    font-size: 16px;
+  }
+
+  .loginBox input {
+    width: 250px;
+    font-size: 14px;
+  }
+
+  .loginBox button {
+    width: 250px;
+    font-size: 14px;
+  }
+}
+
+/* Mobile devices (width <= 480px) */
+@media (max-width: 480px) {
+  h2 {
+    font-size: 20px;
+    top: 3em;
+  }
+
+  .container {
+    gap: 10px;
+    margin-top: 30px;
+  }
+
+  .card {
+    width: 150px;
+    height: 150px;
+  }
+
+  .card img {
+    height: 75%;
+  }
+
+  .card h3 {
+    font-size: 14px;
+  }
+
+  .loginBox input {
+    width: 90%;
+    font-size: 14px;
+  }
+
+  .loginBox button {
+    width: 90%;
+    font-size: 14px;
+  }
+}
